# bmx-shell

./: Cargo.toml
.github/workflows/: ci.yml
installer/: setup.iss
src/: bmx.rs  export.rs  lib.rs  registry.rs  util.rs
src/com/: mod.rs
src/com/shell/: mod.rs  property_store.rs
src/com/shell/command/: transcode.rs
src/com/wic/: class_factory.rs  codec.rs.bak  com.rs  mod.rs  util.rs
src/com/wic/decoder/: mod.rs
src/com/wic/encoder/: mod.rs
